More closer to original theme

--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -29,7 +29,7 @@ const image = 'https://github.com/moeyua/astro-theme-typography/blob/85204bceb6d
       title={title}
       description={desc}
       extend={{
-        link: [{ rel: 'icon', href: '/favicon.svg', type: 'image/svg+xml' }],
+        link: [{ rel: 'icon', href: '/favicon.jpg', type: 'image/jpeg' }],
         meta: [
           {
             name: "twitter:image",
@@ -55,7 +55,7 @@ const image = 'https://github.com/moeyua/astro-theme-typography/blob/85204bceb6d
         <Header />
         <Footer class="max-lg:hidden" />
       </div>
-      <main un-lg="py-20 min-w-xl animate-fadein-down" class="p-7.5">
+      <main un-lg="py-20 min-w-3xl animate-fadein-down" class="p-7.5">
         <slot />
       </main>
       <Footer class="lg:hidden p-7.5" />
