--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,28 +1,52 @@
+/* 定义默认的颜色变量 */
+:root {
+  --background-color: theme("colors.backgroundLight");
+  --foreground-color: theme("colors.foregroundLight");
+  --background-image: linear-gradient(to right, rgba(0, 0, 0, 0.04) 1.5px, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.04) 1.5px, transparent 1px);
+}
+
+/* 深色模式 */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: theme("colors.backgroundDark");
+    --foreground-color: theme("colors.foregroundDark");
+    --background-image: linear-gradient(to right, rgba(255, 255, 255, 0.04) 1.5px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.04) 1.5px, transparent 1px);
+  }
+}
+
+html {
+  background-color: var(--background-color);
+}
+
 body {
   --uno: antialiased;
-  color: theme("colors.foreground");
-  background-color: theme("colors.background");
+  color: var(--foreground-color);
+  
   font-family: theme("fontFamily.sans");
   line-height: normal;
   text-align: left;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.04);
   min-height: 100vh;
 
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.04) 1px, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.04) 1px, transparent 1px);
+  background-image: var(--background-image);
   background-size: 7px 7px;
+}
+
+.post-title\! {
+  font-family: theme("fontFamily.serif");
 }
 
 a {
   transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
   border-bottom: solid 2px;
-  border-color: theme("colors.foreground");
+  border-color: var(--foreground-color);
   padding: 0;
   cursor: pointer;
 }
 
 a:hover {
-  color: theme("colors.background");
-  background-color: theme("colors.foreground");
+  color: var(--background-color);
+  background-color: var(--foreground-color);
   border-bottom: solid transparent 2px;
 }
 
@@ -47,4 +71,34 @@ a:hover.normal {
   color: #c7254e;
   background-color: #f9f2f4;
   border-radius: 4px;
+}
+
+@media (max-width: 1023.9px) {
+  [un-lg~="animate-fadein-down"] {
+    animation: fadein-down 1s ease-out;
+  }
+  [un-max-lg~="animate-fadein-down"] {
+    animation: fadein-down 1s ease-out;
+  }
+}
+
+@media (min-width: 1024px) {
+  [un-lg~="animate-fadein-down"] {
+    animation: fadein-down 1s ease-out;
+  }
+  [un-lg~="animate-fadein-left"] {
+    animation: fadein-left 1s ease-out;
+  }
+}
+
+[un-hover\:lg~="bg-foreground"]:hover {
+  background-color: var(--foreground-color);
+}
+
+[un-hover\:lg~="color-background"]:hover {
+  color: var(--background-color);
+}
+
+[un-lg~="b-l-foreground-solid"] {
+  border-left-color: var(--foreground-color);
 }
