--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const year = new Date().getFullYear()
 const { website, author } = Astro.locals.config
 ---
 
-<footer font-bold text-3 un-flex="~ col gap-1" un-lg="gap-3.5" {...attrs}>
+<footer font-bold font-serif text-3 un-flex="~ col gap-1" un-lg="gap-1" {...attrs}>
   <p>
     © {year}
     <a target="_blank" href={website} rel="noopener noreferrer">{author}</a>
