--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,8 +23,8 @@ const { translate: t } = Astro.locals
     </a>
   </hgroup>
 
-  <nav class="text-center font-bold" un-flex="~ col gap-2">
-    <ul un-lg="flex-col items-start text-4" class="text-3.5" un-flex="~ row gap-2 justify-center">
+  <nav class="text-center font-bold font-serif" un-flex="~ col gap-2">
+    <ul un-lg="flex-col items-start text-4 gap-1" class="text-3.5" un-flex="~ row gap-2 justify-center">
       {
         navs.map((nav) => (
           <li>
