--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -29,7 +29,7 @@ const image = 'https://github.com/moeyua/astro-theme-typography/blob/85204bceb6d
       title={title}
       description={desc}
       extend={{
-        link: [{ rel: 'icon', href: '/favicon.jpg', type: 'image/jpeg' }],
+        link: [{ rel: 'icon', href: '/favicon.jpg', type: 'image/' }],
         meta: [
           {
             name: "twitter:image",
@@ -51,7 +51,7 @@ const image = 'https://github.com/moeyua/astro-theme-typography/blob/85204bceb6d
   </head>
   <body>
     <div un-max-lg="animate-fadein-down" un-lg="flex flex-row-reverse justify-center gap-4 px-8" class="container contain-layout m-a">
-      <div un-lg="sticky top-0 h-screen py-20 animate-fadein-left gap-8" un-lg:flex="~ col justify-between items-start gap-4" class="p-7.5">
+      <div un-lg="sticky top-0 h-screen pt-20 animate-fadein-left gap-8" un-lg:flex="~ col justify-between items-start gap-4" class="p-7.5">
         <Header />
         <Footer class="max-lg:hidden" />
       </div>
