--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -25,7 +25,7 @@ const { Content } = await entry.render()
 const { translate: t} = Astro.locals
 ---
 
-<LayoutDefault title={entry.data.title} desc={entry.data.description}>
+<LayoutDefault title={entry.data.title} desc={entry.data.description} banner={entry.data.banner}>
   <Post post={entry}>
     <Content />
   </Post>
@@ -38,5 +38,5 @@ const { translate: t} = Astro.locals
       rightUrl={`/posts/${next?.slug}/`}
       showPageCount={false}
   />
-  
+
 </LayoutDefault>
