--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,4 +24,8 @@ const { website, author } = Astro.locals.config
     Proudly published with
     <a target="_blank" href="https://astro.build" rel="noopener noreferrer">Astro</a>
   </p>
+  <p>
+    Licensed under
+    <a target="_blank" href="https://creativecommons.org/licenses/by-sa/4.0" rel="noopener noreferrer">CC BY-SA 4.0</a>
+  </p>
 </footer>
