--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -35,10 +35,10 @@ const optimizedImage = image?.src ? new URL(image.src, Astro.url).toString() : "
         link: [{ rel: "icon", href: "/favicon.jpg", type: "image/" }],
         meta: [
           {
-            name: "twitter:image",
+            name: "twitter:image:src",
             content: optimizedImage,
           },
-          { name: "twitter:creator", content: "lz__233" },
+          { name: "twitter:creator", content: "@lz__233" },
           { name: "twitter:card", content: "summary_large_image" },
           { name: "twitter:title", content: title },
           { name: "twitter:description", content: desc },
