--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const { translate: t } = Astro.locals
     un-flex="~ col gap-2.5"
     class="cursor-pointer transition-[padding,background] duration-800 ease-in-out"
   >
-    <a class="normal" href="/">
+    <a class="normal" href="/posts/page/1">
       <h3 class="text-5 font-extrabold font-serif">{author}</h3>
       <h1 class="text-8 font-extrabold font-serif">{title}</h1>
     </a>
