--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -13,7 +13,6 @@
     data-lang="zh-CN"
     data-loading="lazy"
     crossorigin="anonymous"
-    async
-></script>
+    async></script>
 
 <div class="giscus py-8"></div>
