--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,14 +17,14 @@ const { translate: t } = Astro.locals
     un-flex="~ col gap-2.5"
     class="cursor-pointer transition-[padding,background] duration-800 ease-in-out"
   >
-    <a class="normal" href="/posts/page/1">
+    <a class="normal" href="/">
       <h3 class="text-5 font-extrabold font-serif">{author}</h3>
       <h1 class="text-8 font-extrabold font-serif">{title}</h1>
     </a>
   </hgroup>
 
   <nav class="text-center font-bold font-serif" un-flex="~ col gap-2">
-    <ul un-lg="flex-col items-start text-4 gap-1" class="text-3.5" un-flex="~ row gap-2 justify-center">
+    <ul un-lg="flex-col items-start text-4 gap-2" class="text-3.5" un-flex="~ row gap-2 justify-center">
       {
         navs.map((nav) => (
           <li>
@@ -33,14 +33,14 @@ const { translate: t } = Astro.locals
         ))
       }
     </ul>
-    <ul un-flex="~ row gap-1 justify-center">
+    <!--<ul un-flex="~ row gap-1 justify-center">
       {
         socials.map((soc) => (
           <li>
-            <a href={soc.href} target="_blank" title={soc.name} class={`icon i-mdi-${soc.name}`} />
+            <a href={soc.href} target="_blank" title={soc.name} class={`icon i-${soc.icon}`} />
           </li>
         ))
       }
-    </ul>
+    </ul>-->
   </nav>
 </header>
