--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -29,7 +29,7 @@ const { translate: t } = Astro.locals;
       </h1>
     </section>
     <h2 class="home-h2">Platforms</h2>
-    <div class="home-card-div flex flex-wrap contain-layout gap-5">
+    <div class="card-div flex flex-wrap contain-layout gap-5">
       <Card
         href="https://twitter.com/lz__233"
         icon="mdi-twitter"
@@ -56,7 +56,7 @@ const { translate: t } = Astro.locals;
       />
     </div>
     <h2 class="home-h2">Get Touch</h2>
-    <div class="home-card-div flex flex-wrap contain-layout gap-5">
+    <div class="card-div flex flex-wrap contain-layout gap-5">
       <Card
         href="https://t.me/lz233"
         icon="mingcute-telegram-fill"
@@ -76,14 +76,13 @@ const { translate: t } = Astro.locals;
         description="t.me"
       />
       <Card
-        href=""
         icon="mdi-email"
         title="Mail"
         description="ohayou#lz233.ac.cn"
       />
     </div>
     <h2 class="home-h2">Links</h2>
-    <div class="home-card-div flex flex-wrap contain-layout gap-5">
+    <div class="card-div flex flex-wrap contain-layout gap-5">
       <Card
         href="https://drive.lz233.ac.cn"
         icon="mdi-microsoft-onedrive"
@@ -101,6 +100,11 @@ const { translate: t } = Astro.locals;
         icon="mdi-rss"
         title="RSS"
         description="lz233.ac.cn"
+      />
+      <Card
+        href="https://blog.779.moe/"
+        image="https://gravatar.cooluc.com/avatar/cb471d7cb56ac00dd43c576aa878bbd81164827bfaf3919be9d3239381b08888?size=256"
+        title="Yuko's Blog"
       />
     </div>
   </article>
