--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -37,6 +37,12 @@ const { translate: t } = Astro.locals;
         description="@lz__233"
       />
       <Card
+        href="https://bsky.app/profile/lz233.ac.cn"
+        icon="ri-bluesky-fill"
+        title="Bluesky"
+        description="@lz233.ac.cn"
+      />
+      <Card
         href="https://mastodon.social/@lz233"
         icon="mdi-mastodon"
         title="Mastodon"
