--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -79,7 +79,7 @@ a:hover {
 
 .heti a:hover {
   padding-block-end: 0px !important;
-  border-block-end: 1px solid rgba(0, 0, 0, 0) !important;
+  border-block-end: 1px solid rgba(0, 0, 0, 0);
 }
 
 a.normal {
