--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -50,12 +50,10 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
       title={title}
       description={desc}
       extend={{
-        link: [{ rel: "icon", href: "/favicon.jpg", type: "image/" }],
+        link: [{ rel: "icon", href: "/favicon.jpg" }],
         meta: [
-          {
-            name: "twitter:image:src",
-            content: optimizedImage,
-          },
+          { name: "twitter:image:src", content: optimizedImage },
+          { name: "twitter:image:alt", content: optimizedImage },
           { name: "twitter:creator", content: "@lz__233" },
           { name: "twitter:site", content: "@lz__233" },
           { name: "twitter:card", content: "summary_large_image" },
