--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -76,7 +76,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
   <body>
     <div
       un-max-lg="animate-fadein-down"
-      un-lg="flex flex-row-reverse justify-center gap-4 px-8"
+      un-lg="flex flex-row-reverse justify-between gap-4 px-8 mx-auto max-w-6xl"
       class="container contain-layout m-a"
     >
       <div
