--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -60,6 +60,12 @@ const { translate: t } = Astro.locals;
         title="GitHub"
         description="lz233"
       />
+      <Card
+        href="https://orcid.org/0009-0008-5377-2203"
+        icon="academicons-orcid"
+        title="ORCID"
+        description="鲰"
+      />
     </div>
     <h2 class="home-h2">Get Touch</h2>
     <div class="card-div flex flex-wrap contain-layout gap-5">
