--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -48,7 +48,7 @@ if (props.banner) {
 }
 ---
 
-<html lang="zh-cn">
+<html lang="zh-hk">
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
