--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,13 +13,20 @@ const { translate: t } = Astro.locals
 <header un-lg="grow-1 justify-between items-start" un-flex="~ col gap-2.5" class="text-center" {...attrs}>
   <hgroup
     un-hover:lg="bg-foreground color-background pt-3.75 pb-8.75 "
-    un-lg=" write-vertical-right items-start px-2.5 pb-12 b-l-2px b-l-foreground-solid text-left"
+    un-lg="write-vertical-right items-start px-2.5 pb-12 b-l-2px b-l-foreground-solid text-left"
     un-flex="~ col gap-2.5"
     class="cursor-pointer transition-[padding,background] duration-800 ease-in-out"
   >
     <a class="normal" href="/">
       <h3 class="text-5 font-extrabold font-serif">{author}</h3>
-      <h1 class="text-8 font-extrabold font-serif">{title}</h1>
+      <h1 class="text-8 font-extrabold font-serif">
+        <img
+            height="224"
+            src="/fish.svg" 
+            alt={title}
+            class="block h-224px object-cover"
+          />
+      </h1>
     </a>
   </hgroup>
 
