--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,14 +19,7 @@ const { translate: t } = Astro.locals
   >
     <a class="normal" href="/">
       <h3 class="text-5 font-extrabold font-serif">{author}</h3>
-      <h1 class="text-8 font-extrabold font-serif">
-        <img
-            height="224"
-            src="/fish.svg" 
-            alt={title}
-            class="block h-224px object-cover"
-          />
-      </h1>
+      <h1 id="site-title" class="text-8 font-extrabold font-serif tracking-widest text-transparent transition-background-color duration-800 ease-in-out">{title}</h1>
     </a>
   </hgroup>
 
@@ -51,3 +44,29 @@ const { translate: t } = Astro.locals
     </ul>-->
   </nav>
 </header>
+
+<style>
+#site-title {
+  background-color: var(--foreground-color);
+  mask: url(/fish-h.svg) no-repeat center;
+  mask-size: contain;
+  margin-block-start: 0.2em;
+  margin-block-end: 0.2em;
+}
+
+@screen lg {
+  #site-title {
+    mask: url(/fish-v.svg) no-repeat center!important;
+    mask-size: contain!important;
+    margin-block-start: 0!important;
+    margin-block-end: -0.2em!important;
+  }
+}
+
+#site-title::selection {
+  color: transparent;
+}
+hgroup:hover #site-title {
+  background-color: var(--background-color);
+}
+</style>
